--- a/landing page/style.css
+++ b/landing page/style.css
@@ -1,17 +1,156 @@
-.card{
-    height:auto ;
-    width: 300px;
-    border:5px solid;
-    font-size:  size 30px;
-     padding: 10px;
-     margin: 10px;
-     background-color:antiquewhite;
+*{
+    padding: 0%;
+    margin: 0%;
+    box-sizing:border-box;
 }
-.container{
+body{
+    background-color: black;
+    color: white;
+}
+header {
+    
+    color: white;
+     height: 1000px;
+     background-image: url(images/background.jpg);
+     border-bottom: 4px solid white;
+}
+.about{
+    font-size: 30px;
+    font-family: cursive;
+    text-align: center;
+    margin-top:200px ;
+    padding: 30px;
+
+}
+#links{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    list-style-type: none;
+    margin-left: 1500px;
+    transform:translateY(-30px);
+    
+    
+}
+.top{
+    display: flex;
+    flex-wrap: wrap;
+    border-bottom:2px solid ;
+}
+
+.card img{
+    width:300px;
+    height:400px;
+    border-radius: 15px;
+    margin:20px 20px;
+    border:antiquewhite 4px groove;
+}
+.card img:hover{
+    transform:scale(1.03);
+    box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+}
+.left{
+    height:400px ;
+    width:300px ;
+    border:5px groove white ;
+    border-radius:20px ;
+    margin-left: 40px;
+    font-size: 22px;
+    text-align: center;
+    transition: all 1s;
+    box-shadow: 10px 5px 5px; 
+}
+.bottom{
+    display: flex;
+    flex-wrap: wrap;  
+   
+}
+.container {
     display:flex ;
     flex-wrap: wrap;
 }
-.card img{
-    width:200px;
-    height:150px;
+#reason{
+    text-align: center;
+    font-size: 35px;
+    font-family: cursive;
+}
+.left:hover{
+    background-image:url(images/background.jpg);
+    transform: translateY(-10px);
+}
+.input{
+    text-align: center;
+    gap: 15px;
+    margin: 70px 30px;
+}
+.input input {
+    font-size: 25px;
+    padding: 10px;
+    width: 350px;
+
+}
+
+.input button {
+    margin-left: 15px;
+    font-size: 30px;
+    padding: 10px 25px;
+    cursor: pointer;
+    background-color: blueviolet;
+    color: white;
+    border-radius: 10px;
+
+}
+#tag{
+    padding-bottom: 30px;
+    animation: color 4s infinite;
+}
+
+@keyframes color{
+    0%{
+        color: rgb(136, 152, 153);
+        
+    }
+    25%{
+        color: blue;
+        
+    }
+    50%{
+        color: blueviolet;
+
+    }
+    75%{
+        color: antiquewhite;
+
+    }
+    100% {
+        color: rgb(136, 152, 153);
+    }
+
+}
+footer {
+    text-align: center;
+    font-size:30px;
+    background-color: indigo;
+    padding: 100px;
+    margin: 50px;
+
+}
+#Faq{
+    font-size: 40px;
+}
+#Faq li {
+    border: 2px solid ;
+    background-color: rgb(14, 3, 17);
+    margin: 20px;
+    padding: 10px;
+    transition: all 0.5s linear;
+}
+#Faq li:hover{
+    background-image: url(images/background.jpg);
+    border:2px solid black ;
+
+}
+#Faqh{
+    text-align: center;
+    margin-top: 20px;
 }
