--- a/landing page/style.css
+++ b/landing page/style.css
@@ -85,7 +85,7 @@ header {
 }
 .input input {
     font-size: 25px;
-    padding: 10px;
+    padding: 11px;
     width: 350px;
 
 }
@@ -102,7 +102,7 @@ header {
 }
 #tag{
     padding-bottom: 30px;
-    animation: color 4s infinite;
+    animation: color 5s infinite linear;
 }
 
 @keyframes color{
@@ -143,7 +143,7 @@ footer {
     background-color: rgb(14, 3, 17);
     margin: 20px;
     padding: 10px;
-    transition: all 0.5s linear;
+    transition: all 0.5s ease-in-out;
 }
 #Faq li:hover{
     background-image: url(images/background.jpg);
